# rirc-slack

./: Cargo.toml
src/: channels.rs  client.rs  main.rs  server.rs  settings.rs  slack.rs  users.rs
src/server/: handlers.rs  mod.rs  server.rs
src/slack/: channel.rs  http.rs  mod.rs  slack.rs  user.rs
