[package]
name = "rirc_slack"
version = "0.2.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"

[dependencies]
rirc_server = { path = "../rirc_server" }
tokio = { version = "0.2", features = ["full", "macros"] }
hyper = "0.13"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.0.0"
futures = "0.3"
