[package]
name = "rirc_slack"
version = "0.2.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"

[dependencies]
rirc_server = { path = "../rirc_server" }
tokio = { version = "1.6", features = ["full", "macros"] }
hyper = { version = "0.14.8", features = ["server"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.0.0"
futures = "0.3"
